--- a/CoreLib/CoreLib.csproj
+++ b/CoreLib/CoreLib.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Mvvm\IInstancePerLifetimeScope.cs" />
+    <Compile Include="Mvvm\ISingletonLifetimeScope.cs" />
     <Compile Include="Mvvm\INavigator.cs" />
     <Compile Include="Mvvm\IViewFactory.cs" />
     <Compile Include="Mvvm\MvvmModule.cs" />
