--- a/XamFormsNavigation/XamFormsNavigation/XamFormsNavigation.csproj
+++ b/XamFormsNavigation/XamFormsNavigation/XamFormsNavigation.csproj
@@ -36,6 +36,10 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThirdView.xaml.cs">
+      <DependentUpon>ThirdView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\ThirdViewModel.cs" />
     <Compile Include="ViewModels\SecondViewModel.cs" />
     <Compile Include="ViewModels\FirstViewModel.cs" />
     <Compile Include="ViewsModule.cs" />
@@ -45,7 +49,6 @@
     <Compile Include="Views\SecondView.xaml.cs">
       <DependentUpon>SecondView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ThirdView.cs" />
     <Compile Include="Views\InBetweenView.cs" />
     <Compile Include="Views\FourthView.cs" />
   </ItemGroup>
@@ -77,6 +80,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\FirstView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ThirdView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
