Added start page to demonstrate code-only navigation

--- a/XamFormsNavigation/XamFormsNavigation/XamFormsNavigation.csproj
+++ b/XamFormsNavigation/XamFormsNavigation/XamFormsNavigation.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\StartView.cs" />
     <Compile Include="Views\ThirdView.xaml.cs">
       <DependentUpon>ThirdView.xaml</DependentUpon>
     </Compile>
